2003-06-10  Bruno Haible  <bruno@clisp.org>

	* MODULES.html.sh (func_all_modules): Add strchrnul and argp.

2003-06-10  Simon Josefsson  <jas@extundo.com>

	* modules/strchrnul: New file.

2003-06-10  Simon Josefsson  <jas@extundo.com>

	* modules/argp: New file.

2003-06-07  Bruno Haible  <bruno@clisp.org>

	* modules/poll (Makefile.am): Use explicit creation rule for poll.h, to
	avoid AC_CONFIG_LINKS.
	* modules/fnmatch (Makefile.am): Use explicit creation rule for
	fnmatch.h, to avoid AC_CONFIG_LINKS.
	* modules/alloca (Makefile.am): Make creation of alloca.h Ctrl-C safe.

2003-06-07  Jim Meyering  <jim@meyering.net>

	* modules/strtod: Use $(...) notation, not @...@ for
	AC_REPLACE'd variables.
	* modules/localcharset: Likewise.

2003-06-06  Jim Meyering  <jim@meyering.net>
	    Bruno Haible  <bruno@clisp.org>

	* modules/stdbool: Reflect renaming: stdbool.h.in -> stdbool_.h.
	Adjust Makefile.am snippet not to redirect directly to target.
	Use $(STDBOOL_H) notation, not @STDBOOL_H@ for AC_REPLACE'd variables.

2003-05-30  Bruno Haible  <bruno@clisp.org>

	* modules/gettext: Add files m4/nls.m4 and m4/po.m4.
	* config/config.rpath: Upgrade to gettext-0.12.1.

2003-05-22    <karl@gnu.org>

	* gnulib-tool (func_usage): =LIBRARY not =libRARY in help msg.

2003-05-09  Bruno Haible  <bruno@clisp.org>

	* modules/error: Add m4/strerror_r.m4 to file list.

2003-04-10  Bruno Haible  <bruno@clisp.org>

	* modules/findprog: New file.
	* MODULES.html.sh (func_all_modules): Add it.

2003-04-04  Bruno Haible  <bruno@clisp.org>

	* modules/linebreak: New file.
	* MODULES.html.sh (func_all_modules): Add it.

2003-04-03  Bruno Haible  <bruno@clisp.org>

	* modules/utf8-ucs4: New file.
	* modules/utf16-ucs4: New file.
	* modules/ucs4-utf8: New file.
	* modules/ucs4-utf16: New file.
	* MODULES.html.sh (func_all_modules): Add them.

2003-04-02  Bruno Haible  <bruno@clisp.org>

	* modules/binary-io: New file.
	* MODULES.html.sh (func_all_modules): Add it.
