@@ -1,0 +1,28 @@
+Description:
+Exit status codes for some BSD system programs.
+
+Files:
+lib/sysexit_.h
+m4/sysexits.m4
+
+Depends-on:
+
+configure.ac:
+gl_SYSEXITS
+
+Makefile.am:
+EXTRA_DIST += sysexit_.h
+
+# We need the following in order to create a <sysexits.h> when the system
+# doesn't have one that works with the given compiler.
+all-local $(lib_OBJECTS): @SYSEXITS_H@
+sysexits.h: sysexit_.h
+        cp $(srcdir)/sysexit_.h sysexits.h-t
+        mv sysexits.h-t sysexits.h
+MOSTLYCLEANFILES += sysexits.h sysexits.h-t
+
+Include:
+#include <sysexits.h>
+
+Maintainer:
+Simon Josefsson
