@@ -1,3 +1,7 @@
+2003-06-11  Simon Josefsson  <jas@extundo.com>
+
+	* sysexit_.h: New file.
+
 2003-05-20  Derek Price  <derek@ximbiot.com>
 
 	* stat.c [LSTAT]: Compile/use slash_aware_lstat only if it is necessary.
