@@ -1,3 +1,8 @@
+2003-06-11  Simon Josefsson  <jas@extundo.com>
+
+	* modules/sysexits: New file.
+	* MODULES.html.sh (func_all_modules): Add sysexits.
+
 2003-06-10  Bruno Haible  <bruno@clisp.org>
 
 	* MODULES.html.sh (func_all_modules): Add strchrnul and argp.
